@@ -35,8 +35,8 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'
-    implementation 'org.springframework:spring-jdbc:6.2.0'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
+    implementation 'org.springframework:spring-jdbc:6.2.1'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
