@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Jan 28, 2025 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build May 16, 2025 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
@@ -358,15 +358,15 @@
         <property name="outDir" value="data/Ensembl/"/>
         <property name="ensemblGff">
             <map>
-                <entry key="373" value="https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.mRatBN7.2.111.gff3.gz"></entry>
-                <entry key="40"  value="https://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.111.gff3.gz"></entry>
-                <entry key="240" value="https://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.111.gff3.gz"></entry>
-                <entry key="912" value="https://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.111.gff3.gz"></entry>
-                <entry key="512" value="https://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.111.gff3.gz"></entry>
-                <entry key="638" value="https://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.111.gff3.gz"></entry>
-                <entry key="45"  value="https://ftp.ensembl.org/pub/current_gff3/chinchilla_lanigera/Chinchilla_lanigera.ChiLan1.0.111.gff3.gz"></entry>
-                <entry key="1312" value="https://ftp.ensembl.org/pub/current_gff3/chlorocebus_sabaeus/Chlorocebus_sabaeus.ChlSab1.1.111.chr.gff3.gz"></entry>
-                <entry key="1411" value="https://ftp.ensembl.org/pub/current_gff3/heterocephalus_glaber_female/Heterocephalus_glaber_female.Naked_mole-rat_maternal.111.gff3.gz"></entry>
+                <entry key="381" value="https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.GRCr8.114.gff3.gz"></entry>
+                <entry key="40"  value="https://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.114.gff3.gz"></entry>
+                <entry key="240" value="https://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.114.gff3.gz"></entry>
+                <entry key="912" value="https://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.114.gff3.gz"></entry>
+                <entry key="512" value="https://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.114.gff3.gz"></entry>
+                <entry key="638" value="https://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.114.gff3.gz"></entry>
+                <entry key="45"  value="https://ftp.ensembl.org/pub/current_gff3/chinchilla_lanigera/Chinchilla_lanigera.ChiLan1.0.114.gff3.gz"></entry>
+                <entry key="1312" value="https://ftp.ensembl.org/pub/current_gff3/chlorocebus_sabaeus/Chlorocebus_sabaeus.ChlSab1.1.114.chr.gff3.gz"></entry>
+                <entry key="1411" value="https://ftp.ensembl.org/pub/current_gff3/heterocephalus_glaber_female/Heterocephalus_glaber_female.Naked_mole-rat_maternal.114.gff3.gz"></entry>
             </map>
         </property>
     </bean>
@@ -375,48 +375,48 @@
         <property name="outDir" value="Gene Models/Ensembl Gene Features"/>
         <property name="mappings">
             <map>
-                <entry key="Rattus_norvegicus.mRatBN7.2.111-feature.gff3.gz" value="Ensembl (mRatBN7.2.111) Features.gff3.gz"/>
-                <entry key="Rattus_norvegicus.mRatBN7.2.111-model.gff3.gz" value="Ensembl (mRatBN7.2.111) Model.gff3.gz"/>
-                <entry key="Mus_musculus.GRCm39.111-feature.gff3.gz" value="Ensembl (GRCm39.111) Features.gff3.gz"/>
-                <entry key="Mus_musculus.GRCm39.111-model.gff3.gz" value="Ensembl (GRCm39.111) Model.gff3.gz"/>
-                <entry key="Homo_sapiens.GRCh38.111-feature.gff3.gz" value="Ensembl (GRCh38.111) Features.gff3.gz"/>
-                <entry key="Homo_sapiens.GRCh38.111-model.gff3.gz" value="Ensembl (GRCh38.111) Model.gff3.gz"/>
+                <entry key="Rattus_norvegicus.GRCr8.114-feature.gff3.gz" value="Ensembl (GRCr8.114) Features.gff3.gz"/>
+                <entry key="Rattus_norvegicus.GRCr8.114-model.gff3.gz" value="Ensembl (GRCr8.114) Model.gff3.gz"/>
+                <entry key="Mus_musculus.GRCm39.114-feature.gff3.gz" value="Ensembl (GRCm39.114) Features.gff3.gz"/>
+                <entry key="Mus_musculus.GRCm39.114-model.gff3.gz" value="Ensembl (GRCm39.114) Model.gff3.gz"/>
+                <entry key="Homo_sapiens.GRCh38.114-feature.gff3.gz" value="Ensembl (GRCh38.114) Features.gff3.gz"/>
+                <entry key="Homo_sapiens.GRCh38.114-model.gff3.gz" value="Ensembl (GRCh38.114) Model.gff3.gz"/>
 
-                <entry key="Sus_scrofa.Sscrofa11.1.111-feature.gff3.gz" value="Ensembl (Sscrofa11.1.111) Features.gff3.gz"/>
-                <entry key="Sus_scrofa.Sscrofa11.1.111-model.gff3.gz" value="Ensembl (Sscrofa11.1.111) Model.gff3.gz"/>
-                <entry key="Pan_paniscus.panpan1.1.111-feature.gff3.gz" value="Ensembl (panpan1.1.111) Features.gff3.gz"/>
-                <entry key="Pan_paniscus.panpan1.1.111-model.gff3.gz" value="Ensembl (panpan1.1.111) Model.gff3.gz"/>
-                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.111-feature.gff3.gz" value="Ensembl (ROS_Cfam_1.0.111) Features.gff3.gz"/>
-                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.111-model.gff3.gz" value="Ensembl (ROS_Cfam_1.0.111) Model.gff3.gz"/>
-                <entry key="Chinchilla_lanigera.ChiLan1.0.111-feature.gff3.gz" value="Ensembl (ChiLan1.0.111) Features.gff3.gz"/>
-                <entry key="Chinchilla_lanigera.ChiLan1.0.111-model.gff3.gz" value="Ensembl (ChiLan1.0.111) Model.gff3.gz"/>
-                <entry key="Chlorocebus_sabaeus.ChlSab1.1.111.chr-feature.gff3.gz" value="Ensembl (ChlSab1.1.111) Features.gff3.gz"/>
-                <entry key="Chlorocebus_sabaeus.ChlSab1.1.111.chr-model.gff3.gz" value="Ensembl (ChlSab1.1.111) Model.gff3.gz"/>
-                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.111-feature.gff3.gz" value="Ensembl (Naked_mole-rat_maternal.111) Features.gff3.gz"/>
-                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.111-model.gff3.gz" value="Ensembl (Naked_mole-rat_maternal.111) Model.gff3.gz"/>
+                <entry key="Sus_scrofa.Sscrofa11.1.114-feature.gff3.gz" value="Ensembl (Sscrofa11.1.114) Features.gff3.gz"/>
+                <entry key="Sus_scrofa.Sscrofa11.1.114-model.gff3.gz" value="Ensembl (Sscrofa11.1.114) Model.gff3.gz"/>
+                <entry key="Pan_paniscus.panpan1.1.114-feature.gff3.gz" value="Ensembl (panpan1.1.114) Features.gff3.gz"/>
+                <entry key="Pan_paniscus.panpan1.1.114-model.gff3.gz" value="Ensembl (panpan1.1.114) Model.gff3.gz"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.114-feature.gff3.gz" value="Ensembl (ROS_Cfam_1.0.114) Features.gff3.gz"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.114-model.gff3.gz" value="Ensembl (ROS_Cfam_1.0.114) Model.gff3.gz"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.114-feature.gff3.gz" value="Ensembl (ChiLan1.0.114) Features.gff3.gz"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.114-model.gff3.gz" value="Ensembl (ChiLan1.0.114) Model.gff3.gz"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.114.chr-feature.gff3.gz" value="Ensembl (ChlSab1.1.114) Features.gff3.gz"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.114.chr-model.gff3.gz" value="Ensembl (ChlSab1.1.114) Model.gff3.gz"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.114-feature.gff3.gz" value="Ensembl (Naked_mole-rat_maternal.114) Features.gff3.gz"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.114-model.gff3.gz" value="Ensembl (Naked_mole-rat_maternal.114) Model.gff3.gz"/>
             </map>
         </property>
         <property name="mappings2">
             <map>
-                <entry key="Rattus_norvegicus.mRatBN7.2.111-feature.gff3.gz" value="372"/>
-                <entry key="Rattus_norvegicus.mRatBN7.2.111-model.gff3.gz" value="372"/>
-                <entry key="Mus_musculus.GRCm39.111-feature.gff3.gz" value="239"/>
-                <entry key="Mus_musculus.GRCm39.111-model.gff3.gz" value="239"/>
-                <entry key="Homo_sapiens.GRCh38.111-feature.gff3.gz" value="38"/>
-                <entry key="Homo_sapiens.GRCh38.111-model.gff3.gz" value="38"/>
+                <entry key="Rattus_norvegicus.GRCr8.114-feature.gff3.gz" value="380"/>
+                <entry key="Rattus_norvegicus.GRCr8.114-model.gff3.gz" value="380"/>
+                <entry key="Mus_musculus.GRCm39.114-feature.gff3.gz" value="239"/>
+                <entry key="Mus_musculus.GRCm39.114-model.gff3.gz" value="239"/>
+                <entry key="Homo_sapiens.GRCh38.114-feature.gff3.gz" value="38"/>
+                <entry key="Homo_sapiens.GRCh38.114-model.gff3.gz" value="38"/>
 
-                <entry key="Sus_scrofa.Sscrofa11.1.111-feature.gff3.gz" value="911"/>
-                <entry key="Sus_scrofa.Sscrofa11.1.111-model.gff3.gz" value="911"/>
-                <entry key="Pan_paniscus.panpan1.1.111-feature.gff3.gz" value="511"/>
-                <entry key="Pan_paniscus.panpan1.1.111-model.gff3.gz" value="511"/>
-                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.111-feature.gff3.gz" value="634"/>
-                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.111-model.gff3.gz" value="634"/>
-                <entry key="Chinchilla_lanigera.ChiLan1.0.111-feature.gff3.gz" value="44"/>
-                <entry key="Chinchilla_lanigera.ChiLan1.0.111-model.gff3.gz" value="44"/>
-                <entry key="Chlorocebus_sabaeus.ChlSab1.1.111.chr-feature.gff3.gz" value="1311"/>
-                <entry key="Chlorocebus_sabaeus.ChlSab1.1.111.chr-model.gff3.gz" value="1311"/>
-                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.111-feature.gff3.gz" value="1410"/>
-                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.111-model.gff3.gz" value="1410"/>
+                <entry key="Sus_scrofa.Sscrofa11.1.114-feature.gff3.gz" value="911"/>
+                <entry key="Sus_scrofa.Sscrofa11.1.114-model.gff3.gz" value="911"/>
+                <entry key="Pan_paniscus.panpan1.1.114-feature.gff3.gz" value="511"/>
+                <entry key="Pan_paniscus.panpan1.1.114-model.gff3.gz" value="511"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.114-feature.gff3.gz" value="634"/>
+                <entry key="Canis_lupus_familiaris.ROS_Cfam_1.0.114-model.gff3.gz" value="634"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.114-feature.gff3.gz" value="44"/>
+                <entry key="Chinchilla_lanigera.ChiLan1.0.114-model.gff3.gz" value="44"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.114.chr-feature.gff3.gz" value="1311"/>
+                <entry key="Chlorocebus_sabaeus.ChlSab1.1.114.chr-model.gff3.gz" value="1311"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.114-feature.gff3.gz" value="1410"/>
+                <entry key="Heterocephalus_glaber_female.Naked_mole-rat_maternal.114-model.gff3.gz" value="1410"/>
             </map>
         </property>
     </bean>
