@@ -99,10 +99,22 @@ public class CreateGff4Gene {
         SequenceRegionWatcher sequenceRegionWatcher1 = new SequenceRegionWatcher(info.getMapKey(), gff3GenesOnly, dao);
         SequenceRegionWatcher sequenceRegionWatcher2 = new SequenceRegionWatcher(info.getMapKey(), gff3GenesAndTranscripts, dao);
 
+        // human and mouse genes, have thousands of biological-region type genes: they should go to separate gff3 file
+        Gff3ColumnWriter gff3BiologicalRegions = null;
+        SequenceRegionWatcher sequenceRegionWatcher3 = null;
+        if( info.getSpeciesTypeKey()==SpeciesType.HUMAN || info.getSpeciesTypeKey()==SpeciesType.MOUSE ) {
+            gff3BiologicalRegions = new Gff3ColumnWriter(fileName + " Biological Regions.gff3", info.getCompressMode());
+            gff3BiologicalRegions.print(headerInfo);
+            sequenceRegionWatcher3 = new SequenceRegionWatcher(info.getMapKey(), gff3BiologicalRegions, dao);
+        }
+
         List<Gene> activeGenes = dao.getActiveGenes(info.getSpeciesTypeKey());
 
         for( Gene gene: activeGenes ){
+
+            boolean isBiologicalRegion = Utils.stringsAreEqualIgnoreCase( gene.getType(), "biological-region" );
             int geneRgdId = gene.getRgdId();
+
             List<MapData> geneMap = getMapData(geneRgdId, info.getMapKey(), counters);
             if( geneMap.isEmpty() ) {
                 //System.out.println("no map positions");
@@ -125,8 +137,6 @@ public class CreateGff4Gene {
             String nc="N";
 
             for(MapData map : geneMap){
-
-                sequenceRegionWatcher1.emit(map.getChromosome());
 
                 List<Transcript> trsOnMap = getTranscriptsForMap(geneTrs, map, utils);
 
@@ -175,15 +185,28 @@ public class CreateGff4Gene {
                 }
 
                 String attrStr = Gff3ColumnWriter.prepAttributes4Gff3(attributesHashMap);
-                gff3GenesOnly.writeFirst8Columns(map.getChromosome(),"RGD", "gene", map.getStartPos(),map.getStopPos(),".",map.getStrand(),".");
-                gff3GenesOnly.print(attrStr);
-                gff3GenesAndTranscripts.writeFirst8Columns(map.getChromosome(),"RGD", "gene", map.getStartPos(),map.getStopPos(),".",map.getStrand(),".");
-                gff3GenesAndTranscripts.print(attrStr);
+
+                if( isBiologicalRegion ) {
+                    sequenceRegionWatcher3.emit(map.getChromosome());
+
+                    gff3BiologicalRegions.writeFirst8Columns(map.getChromosome(), "RGD", "gene", map.getStartPos(), map.getStopPos(), ".", map.getStrand(), ".");
+                    gff3BiologicalRegions.print(attrStr);
+
+                    continue;
+
+                } else {
+                    sequenceRegionWatcher1.emit(map.getChromosome());
+
+                    gff3GenesOnly.writeFirst8Columns(map.getChromosome(), "RGD", "gene", map.getStartPos(), map.getStopPos(), ".", map.getStrand(), ".");
+                    gff3GenesOnly.print(attrStr);
+                    gff3GenesAndTranscripts.writeFirst8Columns(map.getChromosome(), "RGD", "gene", map.getStartPos(), map.getStopPos(), ".", map.getStrand(), ".");
+                    gff3GenesAndTranscripts.print(attrStr);
+                }
 
                 if(trsOnMap.size()>1){
                     counters.increment(" Genes with more than one mapped transcript");
                 }
-                if(trsOnMap.size()>0){
+                if( trsOnMap.size()>0 ){
                     counters.increment(" Genes with transcripts");
 
                     for( Transcript tr: trsOnMap ){
@@ -267,6 +290,10 @@ public class CreateGff4Gene {
         gff3GenesOnly.sortInMemory();
         gff3GenesAndTranscripts.close();
         gff3GenesAndTranscripts.sortInMemory();
+        if( gff3BiologicalRegions!=null ) {
+            gff3BiologicalRegions.close();
+            gff3BiologicalRegions.sortInMemory();
+        }
 
         dumpCounters(counters, ucscId.isEmpty() ? refseqId : ucscId, msgBuf);
 
